# exercism-rust

./: .gitignore  README.md
accumulate/src/: lib.rs
acronym/src/: lib.rs
affine-cipher/: Cargo.toml
affine-cipher/src/: lib.rs
all-your-base/src/: lib.rs
allergies/: Cargo.toml
allergies/src/: lib.rs
alphametics/src/: lib.rs
anagram/src/: lib.rs
armstrong-numbers/src/: lib.rs
atbash-cipher/src/: lib.rs
beer-song/src/: lib.rs
binary-search/src/: lib.rs
bob/src/: lib.rs
bottle-song/src/: lib.rs
bowling/src/: lib.rs
clock/src/: lib.rs
collatz-conjecture/src/: lib.rs
crypto-square/: Cargo.toml
crypto-square/src/: lib.rs
custom-set/src/: lib.rs
diamond/src/: lib.rs
diffie-hellman/src/: lib.rs
dot-dsl/src/: lib.rs
grade-school/src/: lib.rs
grains/src/: lib.rs
hamming/src/: lib.rs
high-scores/src/: lib.rs
isbn-verifier/src/: lib.rs
isogram/src/: lib.rs
kindergarten-garden/src/: lib.rs
knapsack/src/: lib.rs
largest-series-product/src/: lib.rs
list-ops/src/: lib.rs
luhn-from/src/: lib.rs
luhn-trait/src/: lib.rs
luhn/src/: lib.rs
matching-brackets/src/: lib.rs
matrix/src/: lib.rs
minesweeper/src/: lib.rs
nth-prime/src/: lib.rs
nucleotide-count/src/: lib.rs
perfect-numbers/: Cargo.toml
perfect-numbers/divisors_fixed/: Cargo.toml
perfect-numbers/divisors_fixed/benches/: big_number.rs
perfect-numbers/divisors_fixed/src/: lib.rs
phone-number/: README.md
rail-fence-cipher/: Cargo.toml
robot-name/: Cargo.toml
simple-cipher/: Cargo.toml
two-bucket/: Cargo.toml
word-count/: Cargo.toml
(+34 files in other folders)
